--- a/end-to-end/conf/pytorch_train_config.yaml
+++ b/end-to-end/conf/pytorch_train_config.yaml
@@ -27,9 +27,9 @@ eval:
   num_workers: 4
 
 wandb:
-  use_wandb: false
+  use_wandb: true
   project: "bert-multi-gpu"
-  entity: null  # Set to your wandb username or team name
+  entity: "eddiem"  # Set to your wandb username or team name
   name: null  # Auto-generated if null
 # TODO: Metaflow @secrets X Outerbounds wandb resource integration for managing keys.
 
