Update metaflow_config.json for single gpu

--- a/end-to-end/conf/metaflow_config.json
+++ b/end-to-end/conf/metaflow_config.json
@@ -1,14 +1,10 @@
 {
     "train_resources": {
-        "gpu": 4,
-        "image": "docker.io/eddieob/bert-gpu-example",
-        "compute_pool": "obp-gpu-mega-non-spot",
-        "shared_memory": 4000
+        "gpu": 1,
+        "image": "docker.io/eddieob/bert-gpu-example"
     },
     "eval_resources": {
         "gpu": 1,
-        "image": "docker.io/eddieob/bert-gpu-example",
-        "compute_pool": "obp-gpu-mega-non-spot",
-        "shared_memory": 2000
+        "image": "docker.io/eddieob/bert-gpu-example"
     }
 }
