--- a/end-to-end/conf/pytorch_train_config.yaml
+++ b/end-to-end/conf/pytorch_train_config.yaml
@@ -27,7 +27,7 @@ eval:
   num_workers: 4
 
 wandb:
-  use_wandb: true
+  use_wandb: false
   project: "bert-multi-gpu"
   entity: "eddiem"  # Set to your wandb username or team name
   name: null  # Auto-generated if null
